data/derived/sp14/progs/unify/prog2486.ml.out
Characters 70-110:
  | n -> ((n mod 10)::(digitsOfInt (n / 10)))::ns;;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
